<resources>
    <string name="app_name">Decode</string>
    <string name="capture_camera_failed">Camera disabled</string>
    <string name="capture_hint">Put the qrcode in frame</string>
    <string name="capture_flash">flash</string>
    <string name="capture_back">back</string>
    <string name="capture_title">Scanner</string>
    <string name="capture_album">album</string>
    <string name="capture_decode_failed">No Code found</string>
    <string name="capture_decode_result_title">Scan Result</string>
    <string name="capture_decode_result_open">Open</string>
    <string name="capture_decode_result_copy">Copy</string>
    <string name="capture_decode_result_copy_hint">Already copy!</string>
    <string name="account_balance">Account Balance</string>
    <string name="balance_currency">$</string>
    <string name="balance_amount">524.99</string>


    <string name="techinal_support">深圳市云辉牧联科技有限公司&#160;&#160;&#160;©版权所有</string>
    <string name="inpuut_account">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_list_choice">请选择</string>
    <string name="rem_password">记住密码</string>
    <string name="user_login">用户登录</string>
    <string name="login">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="loading...">正&#160;&#160;在&#160;&#160;登&#160;&#160;陆&#160;</string>
    <string name="account">账&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号:</string>

    <string name="change_psw">服务器配置</string>
    <string name="cancle">取消</string>
    <string name="confim">确定</string>
    <string name="submit">提交</string>
    <string name="input_ori_psw">请输入服务器地址</string>
    <string name="save_success">保存成功</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
</resources>
