<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_white_bg"
    android:orientation="vertical">

    <TextView

        style="@style/textStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@drawable/left_right_corner_bg"
        android:gravity="center"
        android:padding="@dimen/size_4"
        android:text="@string/change_psw"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16sp"
        android:visibility="visible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0.5px"
        android:background="@color/tran_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_55">


        <EditText
            android:id="@+id/et_ip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:background="@drawable/white_bg"
            android:gravity="center_vertical"
            android:hint="@string/input_ori_psw"
            android:paddingLeft="@dimen/size_4"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/tran_black"
            android:textSize="@dimen/text_size_16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48">

        <TextView
            android:id="@+id/cancle"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:background="@drawable/bottom_left_corner_bg"
            android:gravity="center"
            android:text="@string/cancle"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp" />


        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/confim"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:background="@drawable/bottom_right_corner_bg"
            android:gravity="center"
            android:text="@string/confim"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp" />


    </LinearLayout>
</LinearLayout>
